SERVER-36781 Initialize _execContext in $mergeCursors stage